--- a/templates/communes/commune_show.html.twig
+++ b/templates/communes/commune_show.html.twig
@@ -114,7 +114,7 @@
                             </td>
                             <td class="px-6 py-4">
                                 <div class="flex">
-                                    <a href="controleur.php?page=documents&action=read&id={{ document.idt_doc }}">
+                                    <a href="controleur.php?page=documents&action=read&id={{ document.idt_doc }}" label="consulter">
                                         <div class="w-6 h-6 border border-blue-300 rounded flex justify-center items-center hover:bg-blue-50 transition duration-200">
                                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <g clip-path="url(#clip0_273_132)">
